comments and literature reviewed

--- a/Pima Indians Diabetes Dataset.ipynb
+++ b/Pima Indians Diabetes Dataset.ipynb
@@ -51,8 +51,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pima are descendants of people that inhabited the Sonoran desert and Sierra Madre areas for centuries. Around 300 B.C. they moved to Gila River Valley at the time  in Mexico, but region that was acquired by the United States in 1853. A Pima reservation was created in Arizona in 1959 and they adapted to their desert homeland by directing water to support a subsistence agriculture. Around 1900 the number of population of white settlers increased and a diversion of the water happened. That had an impact of Pima's food intake and way of life. Pima Indians used to farm sustained through physical labour to a little labour and scarce of food. As a consequence they food intake became high in fat and their lifestyle was mainly sedentary. That resulted in development of diabetes among the Arizona Pimas. By the 1950's the prevalence of diabetes among Pima Indians <sup>2</sup>.\n",
-    "The Pima population has been under study by the National Institute of Diabetes and Digestive and Kidney Diseases at intervals of 2 years since 1965."
+    "Pima are descendants of people that inhabited the Sonoran desert and Sierra Madre areas for centuries. Around 300 B.C. they moved to Gila River Valley at the time  in Mexico, but region that was acquired by the United States in 1853. A Pima reservation was created in Arizona in 1959 and they adapted to their desert homeland by directing water to support a subsistence agriculture. Around 1900 the number of population of white settlers increased and a diversion of the water happened. That had an impact of Pima's food intake and way of life. Pima Indians used to farm sustained through physical labour to a little labour and scarce of food. As a consequence they food intake became high in fat and their lifestyle was mainly sedentary. That resulted in development of diabetes among the Arizona Pimas, and it drawed attention as they had the highest recorded prevalence and incidence of type 2 diabetes (T2D) of any geographically-defined population <sup>2</sup>.\n",
+    "The Pima population has been under study by the National Institute of Diabetes and Digestive and Kidney Diseases at intervals of 2 years since 1965. As epidemiological evidence indicates that T2D results from interaction of genetic and environmental factors, the Pima Indians Diabetes Dataset includes information about attributes that could and should be related to the onset of diabetes and its future complications."
    ]
   },
   {
@@ -66,6 +66,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Chandra-Selvi at al (2016) defined adipose tissue as a 'loose connective tissue composed mainly of adipocytes that has an unlimited growth potential at any stage of life, excess of adipose tissue predisposes to many diseases-development of insulin resistance'. Their study found that the skinfold thickness gradually decreased in diabetic patients as the duration of disease increased. However, the Pima Indians Diabetes Dataset does not provide information on the duration of the Diabetes.  The researchers discussed the results and concluded that in diabetic patients, there is an efflux of free fatty acids from the adipose tissue, resulting in a decrease of skin fold thickness as the duration of disease increases (CHANDRA-SELVI at al, 2016). \n",
+    "Neverthless, there is still very limited prospective information evaluating the relationship of skinfold thickness with incident T2DM (RUIZ-ALEJOS et al, 2020). \n",
     "Triceps skinfold thickness in millimeters for females aged 20 and over and number of examined persons, mean, standard error of the mean, and selected percentiles, by race and ethnicity and age: United States, 2007–2010 <sup>3</sup>."
    ]
   },
@@ -80,14 +82,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### BODY  WEIGHT AND DIABETES"
+    "### OBESITY AND DIABETES"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Obesity is associated with diabetes. Therefore, they are intimately linked <sup>4,5</sup>. In fact, most of the individuals with type 2 diabetes mellitus (T2DM) are overweight or obese 5.  Despite the link between obesity and T2DM not all obese develops diabetes and not all diabetics are obese people. Diabetic lean people probably have a stronger genetic component for T2DM than overweight and obese individuals <sup>5</sup>."
+    "Obesity, assessed by Body Mass Index (BMI), is intimately associated with diabetes and its impact on the development of T2D has been largely described in large cohort prospective studies <sup>4,5, RUIZ-ALEJOS et al, 2020 </sup>. In fact, most of the individuals with type 2 diabetes mellitus (T2DM) are overweight or obese <sup>5</sup>.  Despite the link between obesity and T2DM not all obese develops diabetes and not all diabetics are obese people. Diabetic lean people probably have a stronger genetic component for T2DM than overweight and obese individuals <sup>5</sup>.\n",
+    "Accordingly to Ruiz-Alejos and col (2020) 'there is no specific recommendation about the use of an anthropometric measurement as a marker for T2DM risk prediction besides BMI and waist circumference'. Unfortunately the waist circumference is a measurement not included in the Pima Indians Diabetes Dataset.\n",
+    "BMI provides a simple, yet accurate method for indicating nutritional status in adults (as it can be seem in the Table below), and it can be calculated by dividing the individual's weight (in kg) by the square of their height (in metres).\n",
+    "<img src=\"https://i.ibb.co/647ZL2X/bmi.png\" alt=\"bmi\" border=\"0\">\n",
+    "\n",
+    "<img src=\"https://i.ibb.co/HTqTfdr/WHO-Europe-Nutrition-Body-mass-index-BMI.png\" alt=\"WHO-Europe-Nutrition-Body-mass-index-BMI\" border=\"0\">\n",
+    "Table. Nutritional Status. Source: World Health Organization."
    ]
   },
   {
@@ -1214,7 +1222,7 @@
     "collapsed": true
    },
    "source": [
-    "##### It can be noticed that some of women don't have information about some of the attributes, such as glucose, blood pressure, etc as the minimum value is zero. Besides, only adult women were included as the minimum age is 21 years old. "
+    "##### It can be seem that only adult women were included as the minimum age is 21 years old. It can be noticed that a number of women don't have information of some of the attributes, such as glucose, blood pressure, etc as the minimum value is zero. "
    ]
   },
   {
@@ -1264,7 +1272,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### The nutritional status Underweight should be classified as Max Value in medical point of view. However, it was considered as a Max value as it starts with the letter U."
+    "###### The nutritional status 'underweight' should not be classified as Max Value in medical point of view. However, it was considered as a Max value as it starts with the letter U."
    ]
   },
   {
@@ -1676,7 +1684,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### The average of glucose is at the normal range less than 140 mg/dl."
+    "##### The average of glucose is at the normal range (less than 140 mg/dl)."
    ]
   },
   {
@@ -1831,7 +1839,7 @@
     "collapsed": true
    },
    "source": [
-    "##### As it shows above, some women have information about glucose but not have information about insulin. Moreover, it shows that 5 women don't have information about glucose as the result shows 763 rows.Furthermore, the maximum value of glucose is 199, considered a Diabetic level. Therefore, even diagnosed with diabetes the women don't have high glucose value. The dataset should have information about drug therapy."
+    "##### As it shows above, some women have information about glucose but no information about insulin. Moreover, it shows that 5 women don't have information about glucose as the result shows 763 rows. Furthermore, the maximum value of glucose is 199, considered a Diabetic level. Therefore, even diagnosed with diabetes they don't present high glucose value. The dataset should have information about drug therapy."
    ]
   },
   {
@@ -2063,7 +2071,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### Normal range of 2h insulin is from 16 to 166 mIU/L. The average value of 2h insulin of the sample show a normal range. However, some women of the sample seem to present high level of insulin level. It might be due obesity or early stage of T2DM or excessive insulin administration."
+    "###### Normal range of 2h insulin is from 16 to 166 mIU/L. The average value of 2h insulin of the samples show a normal range. However, some women of the sample seem to present high level of insulin level. It might be due obesity, early stage of T2DM or excessive insulin administration."
    ]
   },
   {
@@ -2189,7 +2197,7 @@
     "collapsed": true
    },
    "source": [
-    "##### The minimum value of BMI shows that there is no caso of underweight, but the maximum value shows case of women with morbid obesity."
+    "##### The minimum value of BMI shows that there is no case of underweight, but the maximum value shows cases of women with morbid obesity (BMI >= 40kg/m2)."
    ]
   },
   {
@@ -2485,7 +2493,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 4 from 130 women that have DM are malnourished."
+    "##### 4 from 130 Diabetic women are malnourished."
    ]
   },
   {
@@ -2513,7 +2521,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 20 from 130 women that have DM are overweight or obese."
+    "##### 20 from 130 Diabetic women are overweight or obese. "
    ]
   },
   {
@@ -2899,8 +2907,8 @@
     "collapsed": true
    },
    "source": [
-    "##### Diabetic women tends to show larger values of age, BMI, insuLin, skin thickness, blood pressure, and pregnancies.\n",
-    "##### The feature that it is possible to see 2 groups (diabetic and non diabetic) is glucose."
+    "##### Diabetic women tend to show larger values of age, BMI, insulin, skin thickness, blood pressure, and pregnancies.\n",
+    "##### The feature that it is possible to see 2 distinct groups (diabetic and non diabetic) is glucose."
    ]
   },
   {
@@ -2980,7 +2988,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### This model can explain 56% of the variation in dependent variable. To identify which variables influence the outcome, the variable should have a p-value less than 0.05. That way, Diabetes Pedigree Function, Age, and Insulin are attributes to be eliminated in the next model."
+    "##### This model can explain 56% of the variation in dependent variable. Diabetes Pedigree Function, Age, and Insulin are attributes to be eliminated in the next model. as variables that influence the outcome should have a p-value less than 0.05. "
    ]
   },
   {
@@ -3029,7 +3037,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### BMI had p value over 0.05 and will be eliminated in the next model."
+    "##### BMI will be excluded in the next model as it had a p value over 0.05."
    ]
   },
   {
@@ -3077,7 +3085,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Skin Thickeness had p value over 0.05 and will be eliminated in the next model."
+    "##### Skin Thickeness had p value over 0.05 and because of that will not be included in the next model."
    ]
   },
   {
@@ -3124,7 +3132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### The 4th model has 3 not correlated variables that influence the Outcome  - Pregnancies, Glucose and Blood Pressure. "
+    "#### The 4th model has 3 not correlated variables that influence the Outcome (Diabetes): Pregnancies, Glucose and Blood Pressure. "
    ]
   },
   {
@@ -4530,6 +4538,7 @@
     "1. TYNECKI P. Predict diabetes diagnosis for Pima Female Indians with Logistic Regression. Available on: https://www.kaggle.com/ptynecki/pima-indians-diabetes-prediction-with-lr-84.\n",
     "2. SCHULZ LO, CHAUDHARI LS. High-Risk Populations: The Pimas of Arizona and Mexico\n",
     "Curr Obes Rep. 2015 Mar 1; 4(1): 92–98. Available on: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4418458/\n",
+    "RUIZ-ALEJOS A, CARRILLO-LARCO RM, MIRANDA JJ, GILMAN RH, SMEETH L, BERNABE-Ortiz A. Skinfold thickness and the incidence of type 2 diabetes mellitus and hypertension: an analysis of the PERU MIGRANT study. Public Health Nutr. 2020;23(1):63-71. doi:10.1017/S1368980019001307\n",
     "3. FRYAR CD, GU Q, OGDEN CL. Anthropometric reference data for children and adults: United States, 2007–2010. National Center for Health Statistics. Vital Health Stat 11(252). 2012.\n",
     "4. VAN GAAL L., SCHEEN A. Weight Management in Type 2 Diabetes: Current and Emerging Approaches to Treatment, Diabetes Care 2015; 38(6): 1161 - 1172. Available on http://care.diabetesjournals.org/content/38/6/1161.\n",
     "5. WILDING JPH. The importance of weight management in type 2 diabetes mellitus. Int J Clin Pract. 2014 Jun; 68(6): 682–691. Available on: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4238418/\n",
@@ -4537,7 +4546,8 @@
     "DIABETES UK. Oral Glucose Tolerance Test. 2019. Available on: https://www.diabetes.co.uk/oral-glucose-tolerance-test.html\n",
     "NATIONAL INSTITUTE FOR HEALTH AND CARE EXCELLENCE - NICE. Guideline Hypertension in adults: diagnosis and management. 2019. Available on: https://www.nice.org.uk/guidance/ng136/documents/draft-guideline\n",
     "BOER IH, BANGALORE S, BENETOS A, DAVIS AM, MICHOS ED, MUNTNER P, ROSSING P, ZOUNGAS S, BAKRIS G. Diabetes and Hypertension: A Position Statement by the American Diabetes Association. Diabetes Care 2017 Sep; 40(9): 1273-1284.\n",
-    "BLOOD PRESSURE UK. Low Blood Pressure. Available on:  http://www.bloodpressureuk.org/microsites/u40/Home/facts/Whatislow#:~:text=For%20instance%2C%20when%20the%20heart,between%2040%20to%20160%20mmHg."
+    "BLOOD PRESSURE UK. Low Blood Pressure. Available on:  http://www.bloodpressureuk.org/microsites/u40/Home/facts/Whatislow#:~:text=For%20instance%2C%20when%20the%20heart,between%2040%20to%20160%20mmHg.\n",
+    "CHANDRA-SELVI E, PAVITHRA N, SAIKUMAR P. Skin Fold Thickness in Diabetes Mellitus: A Simple Anthropometric Measurement May Bare the Different Aspects of Adipose Tissue. IOSR Journal of Dental and Medical Sciences (IOSR-JDMS) e-ISSN: 2279-0853, p-ISSN: 2279-0861.Volume 15, Issue 11 Ver. IX (November. 2016), PP 07-11."
    ]
   },
   {
